# ORBIT-LANGUAGE

./: .clangd  .gitignore  CMakeLists.txt
_include/tools/: console.hpp
_include/utils/: aliases.hpp
_src/core/: RunTimeData.hpp
_src/core/Arena/: Arena.cpp  Arena.hpp
_src/core/FrontEnd/lexer/: lexer.cpp  lexer.hpp
_src/core/FrontEnd/parser/: parser.cpp  parser.hpp
_src/core/FrontEnd/parser/AST/: AST.hpp
_src/core/FrontEnd/parser/ParserModules/Declaration/: declaration.cpp  declaration.hpp
_src/core/FrontEnd/parser/ParserModules/Expressions/: expression.cpp  expression.hpp
_src/core/FrontEnd/parser/ParserModules/Statements/: statement.hpp
_src/core/FrontEnd/tokenizer/: tokenizer.cpp  tokenizer.hpp
_src/core/lexer/: lexer.cpp  lexer.hpp
_src/main/: main.cpp
_src/main/commands/: run_file.hpp
_tests/logs/: __3IWuwGVA7Cw__.txt  __560E9RPWc3n__.txt
